feat(lib): update lib